--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,11 @@
 .app {
-  padding: 1.8rem;
   height: 100vh;
   max-width: 550px;
   margin: 0 auto;
-  // min-height: 80rem;
+
+  &__page {
+    height: 100%;
+    position: relative;
+    padding: 1.8rem;
+  }
 }
