--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,10 @@ $font-size-normal: 1.4rem;
 $font-size-small: 1.2rem;
 
 $color-orange: #fdce84;
+$color-green-dark: #3c5a56;
 $color-green: #8acac0;
+$color-green-light: #8acac0a9;
+$color-orange-light: #fdcf8467;
 $color-disabled: #a2a2a7;
 $color-disabled-light: #cfccccd2;
 $color-error: #ff000e;
