--- a/src/pages/HomePage/BlockedDayCard/BlockedDayCard.scss
+++ b/src/pages/HomePage/BlockedDayCard/BlockedDayCard.scss
@@ -6,6 +6,7 @@
   border-radius: 1rem;
   padding: 1.1rem 1.5rem;
   margin: 0.5rem 0;
+  list-style: none;
 
   &__information {
     display: flex;
@@ -20,6 +21,10 @@
     }
     p {
       font-size: $font-size-small;
+      padding-left: 0.5rem;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     &--hours {
@@ -44,5 +49,31 @@
         max-width: 10rem;
       }
     }
+  }
+
+  &__modal-description {
+    padding: 1rem 0;
+  }
+
+  &__modal-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+
+    button {
+      padding: 1.3rem;
+      border: none;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
+  }
+
+  &__modal-delete {
+    background-color: $color-green;
+  }
+
+  &__modal-cancel {
+    margin-left: 1rem;
+    color: $color-disabled;
   }
 }
