--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,7 +28,7 @@
     color: $color-disabled;
     cursor: pointer;
     &--selected {
-      color: $color-orange;
+      color: $color-green;
     }
 
     &--add {
