--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,11 +1,13 @@
 .loader {
-  z-index: 2;
-  position: absolute;
+  z-index: 1;
+  position: fixed;
   background-color: #ffffff73;
-  height: calc(100vh - 9rem);
+  height: calc(100vh);
   width: 100vw;
-  max-width: 514px;
-
+  max-width: calc(100vw - 3.2rem);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
