--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   font-family: $font-family-bold;
   background-color: #e6e6e6;
+  z-index: 2;
 
   &__container {
     display: flex;
