--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0.4rem 2rem;
+    // padding: 0 2rem;
     color: $color-disabled;
     cursor: pointer;
     &--selected {
