--- a/src/pages/HomePage/BlockedDayCard/BlockedDayCard.scss
+++ b/src/pages/HomePage/BlockedDayCard/BlockedDayCard.scss
@@ -11,14 +11,16 @@
   &__information {
     display: flex;
     flex-direction: column;
-    width: 94%;
+    
   }
   &__information-unit {
     display: flex;
     margin: 0.4rem 0;
     flex-wrap: wrap;
-    overflow-wrap: anywhere;
+    word-wrap: normal;
+    word-break: break-all; 
     line-height: 1.7rem;
+    width: 90%;
 
     h4 {
       font-size: 1.3rem;
@@ -31,7 +33,8 @@
 
     &--hours {
       flex-direction: column;
-
+      // overflow-wrap: normal;
+      width: 100%;
       ul {
         display: flex;
         flex-wrap: wrap;
@@ -76,5 +79,9 @@
 
   &__modal-cancel {
     margin-left: 1rem;
+  }
+
+  .MuiBox-root{
+    border-color: transparent;
   }
 }
