--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -34,3 +34,13 @@
     color: $color-green-dark;
   }
 }
+
+.MuiButtonBase-root.MuiPaginationItem-root{
+  font-size: 1.3rem;
+}
+.MuiPagination-ul{
+  li {
+    font-size: 2rem;
+  }
+}
+
