--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,6 +10,7 @@
   font-family: $font-family-bold;
   background-color: #e6e6e6;
   z-index: 2;
+  min-height: 6.5vh;
 
   &__container {
     display: flex;
