--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,7 +10,6 @@
   font-family: $font-family-bold;
   background-color: #e6e6e6;
   z-index: 2;
-  min-height: 6.5vh;
 
   &__container {
     display: flex;
@@ -55,5 +54,10 @@
     left: 50%;
     transform: translateX(-50%);
     width: 550px;
+  }
+}
+@media (max-width: 550px) {
+  .navbar {
+    min-height: 6.5vh;
   }
 }
